# Wandelt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
demo/: main.wdt
docs/: coding_standards.md  spec.md
scripts/: build-debug.bat  build-debug.sh  build-dist.bat  build-dist.sh  build-release.bat  build-release.sh  clean.bat  clean.sh  coverage.bat  run-clang-format.bat  setup-clang.bat  setup-clang.sh  setup-vs2019.bat  setup-vs2022.bat
src/: CMakeLists.txt
src/Wandelt/: Array.hpp  Ast.cpp  Ast.hpp  Defines.hpp  Diagnostics.cpp  Diagnostics.hpp  File.cpp  File.hpp  Lexer.cpp  Lexer.hpp  Memory.cpp  Memory.hpp  Parser.cpp  Parser.hpp  Platform.cpp  Platform.hpp  ScopedTimer.hpp  Sema.cpp  Sema.hpp  String.cpp  String.hpp  SymbolTable.cpp  SymbolTable.hpp  Token.cpp  Token.hpp  Type.cpp  Type.hpp  Vector.hpp  VirtualMemory.cpp  VirtualMemory.hpp  main.cpp  pch.hpp
tests/Wandelt/: LexerTests.cpp  LexerTests.hpp  ParserTests.cpp  ParserTests.hpp  SemaTests.cpp  SemaTests.hpp  TestAstAssertions.hpp  TestingFramework.hpp  Tests.cpp  Tests.hpp
tools/: Wandelt.natvis
tools/vs/: UpgradeLog.htm  Wandelt.TextMate.pkgdef  Wandelt.csproj  Wandelt.slnx  WandeltContentType.cs  WandeltPackage.cs  source.extension.vsixmanifest
tools/vs/Properties/: AssemblyInfo.cs
tools/vs/Syntaxes/: language-configuration.json  wdt.tmLanguage.json
